--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb393565551205873</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>393565551205873</string>
+    <key>FacebookDisplayName</key>
+    <string>ivariPublications</string>
 </dict>
 </plist>
