--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   flutter_webview_plugin: ^0.3.0+2
   http: ^0.12.0+1
   transparent_image: ^0.1.0
+  firebase_auth: ^0.8.1+3
+  cloud_firestore: ^0.9.5+1
 
 
 dev_dependencies:
